# common-english-composition-ocr

./: .gitignore  service_name  url.txt
src/: CMakeLists.txt  demo.cpp
src/alg/include/: Decode.h  Detector.h  GetLine.h  ImageFunc.h  cls_num_rec.hpp  det_textsnake_eng.hpp  image_to_blob.hpp  json.h
src/alg/lib/: performance_testing_GPU
src/alg/model/det_model/: det_config.ini
src/alg/model/reg_eng/: dict_eng.txt  word_en.txt
src/alg/model/reg_gen/: zidian_new_5883.txt
